--- a/Grace-Chapel-App/Grace-Chapel-App/Base.lproj/Main.storyboard
+++ b/Grace-Chapel-App/Grace-Chapel-App/Base.lproj/Main.storyboard
@@ -5,10 +5,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--First View Controller-->
+        <!--Home View Controller-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
-                <viewController id="9pv-A4-QxB" customClass="FirstViewController" customModule="Grace_Chapel_App" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="9pv-A4-QxB" customClass="homeViewController" customModule="Grace_Chapel_App" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ia1-K6-d13"/>
                         <viewControllerLayoutGuide type="bottom" id="4ug-Mw-9AY"/>
@@ -24,10 +24,10 @@
             </objects>
             <point key="canvasLocation" x="1448" y="-320"/>
         </scene>
-        <!--Second View Controller-->
+        <!--Register View Controller-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
-                <viewController id="8rJ-Kc-sve" customClass="SecondViewController" customModule="Grace_Chapel_App" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="8rJ-Kc-sve" customClass="registerViewController" customModule="Grace_Chapel_App" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="L7p-HK-0SC"/>
                         <viewControllerLayoutGuide type="bottom" id="Djb-ko-YwX"/>
@@ -65,10 +65,10 @@
             </objects>
             <point key="canvasLocation" x="0.0" y="0.0"/>
         </scene>
-        <!--Second View Controller-->
+        <!--Ccb View Controller-->
         <scene sceneID="c2X-sD-MJL">
             <objects>
-                <viewController id="wNm-CM-nZo" customClass="SecondViewController" customModule="Grace_Chapel_App" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="wNm-CM-nZo" customClass="ccbViewController" customModule="Grace_Chapel_App" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="7ha-9E-ID7"/>
                         <viewControllerLayoutGuide type="bottom" id="V87-Ni-hGa"/>
@@ -84,10 +84,10 @@
             </objects>
             <point key="canvasLocation" x="3051" y="359"/>
         </scene>
-        <!--Second View Controller-->
+        <!--Give View Controller-->
         <scene sceneID="feM-AO-7cH">
             <objects>
-                <viewController id="H8g-ev-wzX" customClass="SecondViewController" customModule="Grace_Chapel_App" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="H8g-ev-wzX" customClass="giveViewController" customModule="Grace_Chapel_App" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="rqa-MO-t68"/>
                         <viewControllerLayoutGuide type="bottom" id="dV4-8r-N5i"/>
